--- a/crypto-config.yaml
+++ b/crypto-config.yaml
@@ -22,7 +22,7 @@ OrdererOrgs:
 # ---------------------------------------------------------------------------
 PeerOrgs:
   # ---------------------------------------------------------------------------
-  # Org1
+  # gtb
   # ---------------------------------------------------------------------------
   - Name: gtb
     Domain: gtb.zonenet
@@ -44,8 +44,8 @@ PeerOrgs:
     #                 Org.Domain, respectively.
     # ---------------------------------------------------------------------------
     # Specs:
-    #   - Hostname: foo # implicitly "foo.org1.example.com"
-    #     CommonName: foo27.org5.example.com # overrides Hostname-based FQDN set above
+    #   - Hostname: foo # implicitly "foo.gtb.zonenet"
+    #     CommonName: foo27.org5.zonenet # overrides Hostname-based FQDN set above
     #   - Hostname: bar
     #   - Hostname: baz
     # ---------------------------------------------------------------------------
@@ -72,7 +72,7 @@ PeerOrgs:
     Users:
       Count: 1
   # ---------------------------------------------------------------------------
-  # Org2: See "Org1" for full specification
+  # uba: See "gtb" for full specification
   # ---------------------------------------------------------------------------
   - Name: uba
     Domain: uba.zonenet
