--- a/docker-compose-org3.yaml
+++ b/docker-compose-org3.yaml
@@ -6,51 +6,51 @@
 version: '2'
 
 volumes:
-  peer0.org3.example.com:
-  peer1.org3.example.com:
+  peer0.org3.zonenet:
+  peer1.org3.zonenet:
 
 networks:
   byfn:
 
 services:
 
-  peer0.org3.example.com:
-    container_name: peer0.org3.example.com
+  peer0.org3.zonenet:
+    container_name: peer0.org3.zonenet
     extends:
       file: base/peer-base.yaml
       service: peer-base
     environment:
-      - CORE_PEER_ID=peer0.org3.example.com
-      - CORE_PEER_ADDRESS=peer0.org3.example.com:7051
-      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer0.org3.example.com:7051
+      - CORE_PEER_ID=peer0.org3.zonenet
+      - CORE_PEER_ADDRESS=peer0.org3.zonenet:7051
+      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer0.org3.zonenet:7051
       - CORE_PEER_LOCALMSPID=Org3MSP
     volumes:
         - /var/run/:/host/var/run/
-        - ./org3-artifacts/crypto-config/peerOrganizations/org3.example.com/peers/peer0.org3.example.com/msp:/etc/hyperledger/fabric/msp
-        - ./org3-artifacts/crypto-config/peerOrganizations/org3.example.com/peers/peer0.org3.example.com/tls:/etc/hyperledger/fabric/tls
-        - peer0.org3.example.com:/var/hyperledger/production
+        - ./org3-artifacts/crypto-config/peerOrganizations/org3.zonenet/peers/peer0.org3.zonenet/msp:/etc/hyperledger/fabric/msp
+        - ./org3-artifacts/crypto-config/peerOrganizations/org3.zonenet/peers/peer0.org3.zonenet/tls:/etc/hyperledger/fabric/tls
+        - peer0.org3.zonenet:/var/hyperledger/production
     ports:
       - 11051:7051
       - 11053:7053
     networks:
       - byfn
 
-  peer1.org3.example.com:
-    container_name: peer1.org3.example.com
+  peer1.org3.zonenet:
+    container_name: peer1.org3.zonenet
     extends:
       file: base/peer-base.yaml
       service: peer-base
     environment:
-      - CORE_PEER_ID=peer1.org3.example.com
-      - CORE_PEER_ADDRESS=peer1.org3.example.com:7051
-      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer1.org3.example.com:7051
-      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.org3.example.com:7051
+      - CORE_PEER_ID=peer1.org3.zonenet
+      - CORE_PEER_ADDRESS=peer1.org3.zonenet:7051
+      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer1.org3.zonenet:7051
+      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.org3.zonenet:7051
       - CORE_PEER_LOCALMSPID=Org3MSP
     volumes:
         - /var/run/:/host/var/run/
-        - ./org3-artifacts/crypto-config/peerOrganizations/org3.example.com/peers/peer1.org3.example.com/msp:/etc/hyperledger/fabric/msp
-        - ./org3-artifacts/crypto-config/peerOrganizations/org3.example.com/peers/peer1.org3.example.com/tls:/etc/hyperledger/fabric/tls
-        - peer1.org3.example.com:/var/hyperledger/production
+        - ./org3-artifacts/crypto-config/peerOrganizations/org3.zonenet/peers/peer1.org3.zonenet/msp:/etc/hyperledger/fabric/msp
+        - ./org3-artifacts/crypto-config/peerOrganizations/org3.zonenet/peers/peer1.org3.zonenet/tls:/etc/hyperledger/fabric/tls
+        - peer1.org3.zonenet:/var/hyperledger/production
     ports:
       - 12051:7051
       - 12053:7053
@@ -69,13 +69,13 @@ services:
       - CORE_LOGGING_LEVEL=INFO
       #- CORE_LOGGING_LEVEL=DEBUG
       - CORE_PEER_ID=Org3cli
-      - CORE_PEER_ADDRESS=peer0.org3.example.com:7051
+      - CORE_PEER_ADDRESS=peer0.org3.zonenet:7051
       - CORE_PEER_LOCALMSPID=Org3MSP
       - CORE_PEER_TLS_ENABLED=true
-      - CORE_PEER_TLS_CERT_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/org3.example.com/peers/peer0.org3.example.com/tls/server.crt
-      - CORE_PEER_TLS_KEY_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/org3.example.com/peers/peer0.org3.example.com/tls/server.key
-      - CORE_PEER_TLS_ROOTCERT_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/org3.example.com/peers/peer0.org3.example.com/tls/ca.crt
-      - CORE_PEER_MSPCONFIGPATH=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/org3.example.com/users/Admin@org3.example.com/msp
+      - CORE_PEER_TLS_CERT_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/org3.zonenet/peers/peer0.org3.zonenet/tls/server.crt
+      - CORE_PEER_TLS_KEY_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/org3.zonenet/peers/peer0.org3.zonenet/tls/server.key
+      - CORE_PEER_TLS_ROOTCERT_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/org3.zonenet/peers/peer0.org3.zonenet/tls/ca.crt
+      - CORE_PEER_MSPCONFIGPATH=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/org3.zonenet/users/Admin@org3.zonenet/msp
     working_dir: /opt/gopath/src/github.com/hyperledger/fabric/peer
     command: /bin/bash
     volumes:
@@ -84,7 +84,7 @@ services:
         - ./org3-artifacts/crypto-config:/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/
         - ./scripts:/opt/gopath/src/github.com/hyperledger/fabric/peer/scripts/
     depends_on:
-      - peer0.org3.example.com
-      - peer1.org3.example.com
+      - peer0.org3.zonenet
+      - peer1.org3.zonenet
     networks:
       - byfn
