--- a/base/docker-compose-base.yaml
+++ b/base/docker-compose-base.yaml
@@ -7,8 +7,8 @@ version: '2'
 
 services:
 
-  orderer.example.com:
-    container_name: orderer.example.com
+  orderer.zonenet:
+    container_name: orderer.zonenet
     image: hyperledger/fabric-orderer:$IMAGE_TAG
     environment:
       - ORDERER_GENERAL_LOGLEVEL=INFO
@@ -26,89 +26,89 @@ services:
     command: orderer
     volumes:
     - ../channel-artifacts/genesis.block:/var/hyperledger/orderer/orderer.genesis.block
-    - ../crypto-config/ordererOrganizations/example.com/orderers/orderer.example.com/msp:/var/hyperledger/orderer/msp
-    - ../crypto-config/ordererOrganizations/example.com/orderers/orderer.example.com/tls/:/var/hyperledger/orderer/tls
-    - orderer.example.com:/var/hyperledger/production/orderer
+    - ../crypto-config/ordererOrganizations/zonenet/orderers/orderer.zonenet/msp:/var/hyperledger/orderer/msp
+    - ../crypto-config/ordererOrganizations/zonenet/orderers/orderer.zonenet/tls/:/var/hyperledger/orderer/tls
+    - orderer.zonenet:/var/hyperledger/production/orderer
     ports:
       - 7050:7050
 
-  peer0.org1.example.com:
-    container_name: peer0.org1.example.com
+  peer0.gtb.zonenet:
+    container_name: peer0.gtb.zonenet
     extends:
       file: peer-base.yaml
       service: peer-base
     environment:
-      - CORE_PEER_ID=peer0.org1.example.com
-      - CORE_PEER_ADDRESS=peer0.org1.example.com:7051
-      - CORE_PEER_GOSSIP_BOOTSTRAP=peer1.org1.example.com:7051
-      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer0.org1.example.com:7051
+      - CORE_PEER_ID=peer0.gtb.zonenet
+      - CORE_PEER_ADDRESS=peer0.gtb.zonenet:7051
+      - CORE_PEER_GOSSIP_BOOTSTRAP=peer1.gtb.zonenet:7051
+      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer0.gtb.zonenet:7051
       - CORE_PEER_LOCALMSPID=Org1MSP
     volumes:
         - /var/run/:/host/var/run/
-        - ../crypto-config/peerOrganizations/org1.example.com/peers/peer0.org1.example.com/msp:/etc/hyperledger/fabric/msp
-        - ../crypto-config/peerOrganizations/org1.example.com/peers/peer0.org1.example.com/tls:/etc/hyperledger/fabric/tls
-        - peer0.org1.example.com:/var/hyperledger/production
+        - ../crypto-config/peerOrganizations/gtb.zonenet/peers/peer0.gtb.zonenet/msp:/etc/hyperledger/fabric/msp
+        - ../crypto-config/peerOrganizations/gtb.zonenet/peers/peer0.gtb.zonenet/tls:/etc/hyperledger/fabric/tls
+        - peer0.gtb.zonenet:/var/hyperledger/production
     ports:
       - 7051:7051
       - 7053:7053
 
-  peer1.org1.example.com:
-    container_name: peer1.org1.example.com
+  peer1.gtb.zonenet:
+    container_name: peer1.gtb.zonenet
     extends:
       file: peer-base.yaml
       service: peer-base
     environment:
-      - CORE_PEER_ID=peer1.org1.example.com
-      - CORE_PEER_ADDRESS=peer1.org1.example.com:7051
-      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer1.org1.example.com:7051
-      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.org1.example.com:7051
+      - CORE_PEER_ID=peer1.gtb.zonenet
+      - CORE_PEER_ADDRESS=peer1.gtb.zonenet:7051
+      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer1.gtb.zonenet:7051
+      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.gtb.zonenet:7051
       - CORE_PEER_LOCALMSPID=Org1MSP
     volumes:
         - /var/run/:/host/var/run/
-        - ../crypto-config/peerOrganizations/org1.example.com/peers/peer1.org1.example.com/msp:/etc/hyperledger/fabric/msp
-        - ../crypto-config/peerOrganizations/org1.example.com/peers/peer1.org1.example.com/tls:/etc/hyperledger/fabric/tls
-        - peer1.org1.example.com:/var/hyperledger/production
+        - ../crypto-config/peerOrganizations/gtb.zonenet/peers/peer1.gtb.zonenet/msp:/etc/hyperledger/fabric/msp
+        - ../crypto-config/peerOrganizations/gtb.zonenet/peers/peer1.gtb.zonenet/tls:/etc/hyperledger/fabric/tls
+        - peer1.gtb.zonenet:/var/hyperledger/production
 
     ports:
       - 8051:7051
       - 8053:7053
 
-  peer0.org2.example.com:
-    container_name: peer0.org2.example.com
+  peer0.uba.zonenet:
+    container_name: peer0.uba.zonenet
     extends:
       file: peer-base.yaml
       service: peer-base
     environment:
-      - CORE_PEER_ID=peer0.org2.example.com
-      - CORE_PEER_ADDRESS=peer0.org2.example.com:7051
-      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer0.org2.example.com:7051
-      - CORE_PEER_GOSSIP_BOOTSTRAP=peer1.org2.example.com:7051
+      - CORE_PEER_ID=peer0.uba.zonenet
+      - CORE_PEER_ADDRESS=peer0.uba.zonenet:7051
+      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer0.uba.zonenet:7051
+      - CORE_PEER_GOSSIP_BOOTSTRAP=peer1.uba.zonenet:7051
       - CORE_PEER_LOCALMSPID=Org2MSP
     volumes:
         - /var/run/:/host/var/run/
-        - ../crypto-config/peerOrganizations/org2.example.com/peers/peer0.org2.example.com/msp:/etc/hyperledger/fabric/msp
-        - ../crypto-config/peerOrganizations/org2.example.com/peers/peer0.org2.example.com/tls:/etc/hyperledger/fabric/tls
-        - peer0.org2.example.com:/var/hyperledger/production
+        - ../crypto-config/peerOrganizations/uba.zonenet/peers/peer0.uba.zonenet/msp:/etc/hyperledger/fabric/msp
+        - ../crypto-config/peerOrganizations/uba.zonenet/peers/peer0.uba.zonenet/tls:/etc/hyperledger/fabric/tls
+        - peer0.uba.zonenet:/var/hyperledger/production
     ports:
       - 9051:7051
       - 9053:7053
 
-  peer1.org2.example.com:
-    container_name: peer1.org2.example.com
+  peer1.uba.zonenet:
+    container_name: peer1.uba.zonenet
     extends:
       file: peer-base.yaml
       service: peer-base
     environment:
-      - CORE_PEER_ID=peer1.org2.example.com
-      - CORE_PEER_ADDRESS=peer1.org2.example.com:7051
-      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer1.org2.example.com:7051
-      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.org2.example.com:7051
+      - CORE_PEER_ID=peer1.uba.zonenet
+      - CORE_PEER_ADDRESS=peer1.uba.zonenet:7051
+      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer1.uba.zonenet:7051
+      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.uba.zonenet:7051
       - CORE_PEER_LOCALMSPID=Org2MSP
     volumes:
         - /var/run/:/host/var/run/
-        - ../crypto-config/peerOrganizations/org2.example.com/peers/peer1.org2.example.com/msp:/etc/hyperledger/fabric/msp
-        - ../crypto-config/peerOrganizations/org2.example.com/peers/peer1.org2.example.com/tls:/etc/hyperledger/fabric/tls
-        - peer1.org2.example.com:/var/hyperledger/production
+        - ../crypto-config/peerOrganizations/uba.zonenet/peers/peer1.uba.zonenet/msp:/etc/hyperledger/fabric/msp
+        - ../crypto-config/peerOrganizations/uba.zonenet/peers/peer1.uba.zonenet/tls:/etc/hyperledger/fabric/tls
+        - peer1.uba.zonenet:/var/hyperledger/production
     ports:
       - 10051:7051
       - 10053:7053
